# apps.home.starter

./: .gitattributes  AUTHORS  CMakeLists.txt  NOTICE  rd3starter  rd4starter  starter  starter.desktop.in  starter.efl  starter.init.sh  starter.manifest  starter.rule
boot-mgr/: CMakeLists.txt  starter.c  starter.h  x11.c  x11.h
debian/: changelog  control  rules  starter.install.in  starter.postinst
include/: clock-mgr.h  dbus-util.h  dbus-util_w.h  dbus_util.h  direct-access.h  hourly_alert.h  hw_key.h  hw_key_w.h  lock-daemon-lite.h  lock-daemon.h  lockd-bt.h  lockd-debug.h  lockd-process-mgr.h  lockd-window-mgr.h  menu_daemon.h  package_mgr.h  pkg_event.h  process_mgr.h  starter-util.h  starter-vconf.h  starter.h  starter_w.h  status.h  util.h  window_mgr.h  x11.h  xmonitor.h
include/mobile/: home_mgr.h  hw_key.h  lock_mgr.h  popup.h  starter.h
include/wearable/: clock_mgr.h  home_mgr.h  hourly_alert.h  hw_key.h
lock-mgr/: CMakeLists.txt
lock-mgr/include/: lock-daemon.h  lockd-debug.h  lockd-process-mgr.h  lockd-window-mgr.h
lock-mgr/src/: lock-daemon.c  lockd-debug.c  lockd-process-mgr.c  lockd-window-mgr.c
lock-setting/: CMakeLists.txt
lock-setting/lockapp-setting/: CMakeLists.txt
lock-setting/lockapp-setting/include/: openlock-setting-debug.h  openlock-setting-main.h  openlock-setting-pw.h  openlock-setting-util.h  openlock-setting.h
lock-setting/lockapp-setting/src/: openlock-setting-main.c  openlock-setting-pw.c  openlock-setting-util.c  openlock-setting.c
lock-setting/lockscreen-options/: CMakeLists.txt
lock-setting/lockscreen-options/include/: lockscreen-options-debug.h  lockscreen-options-dualclock.h  lockscreen-options-locktitle.h  lockscreen-options-main.h  lockscreen-options-shortcuts-edit.h  lockscreen-options-shortcuts.h  lockscreen-options-util.h  lockscreen-options.h
lock-setting/lockscreen-options/res/edje/: lockscreen-options-locktitle.edc  lockscreen-options-shortcuts.edc  lockscreen-options-thumbnail.edc  lockscreen-options.edc
lock-setting/lockscreen-options/src/: lockscreen-options-dualclock.c  lockscreen-options-locktitle.c  lockscreen-options-main.c  lockscreen-options-shortcuts-edit.c  lockscreen-options-shortcuts.c  lockscreen-options-util.c  lockscreen-options.c
lock-setting/po/: CMakeLists.txt  az.po  bg.po  cs.po  de_DE.po  el_GR.po  en_US.po  es_MX.po  es_US.po  et.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ko_KR.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  sk.po  sl.po  sr.po  sv.po  tr_TR.po  uz.po  zh_HK.po  zh_SG.po  zh_TW.po
lock_pwd/include/: lock_pwd_complex.h  lock_pwd_control_panel.h  lock_pwd_simple.h  lock_pwd_util.h  lock_pwd_verification.h
lock_pwd/res/edje/: CMakeLists.txt  lock_btn.edc  lock_entry.edc  lock_pwd.edc  lock_pwd_complex.edc  lock_pwd_control_panel.edc  lock_pwd_simple.edc
lock_pwd/src/: lock_pwd_complex.c  lock_pwd_control_panel.c  lock_pwd_simple.c  lock_pwd_util.c  lock_pwd_verification.c
mobile/include/: menu_daemon.h
mobile/lock-setting/lockscreen-options/include/: lockscreen-options-main.h  lockscreen-options.h
mobile/lock-setting/lockscreen-options/src/: lockscreen-options-main.c  lockscreen-options-util.c
mobile/lock-setting/po/: ar.po  ca.po  da.po  en.po  es_ES.po  eu.po  ka.po  kk.po  lt.po  lv.po  ro.po  ru_RU.po  uk.po  zh_CN.po
mobile/packaging/: starter.spec
mobile/src/: lockd-process-mgr.c  menu_daemon.c
mobile/systemd/: starter.service
mobile/test/: get_entry.c  set_theme.c
packaging/: starter-pre.service  starter.changes  starter.service  starter.spec  wait-lock.service
po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  (+23 more)
src/: clock-mgr.c  dbus-util.c  dbus-util_w.c  dbus_util.c  direct-access.c  hourly_alert.c  hw_key.c  hw_key_w.c  lock-daemon-lite.c  lock-daemon.c  lockd-bt.c  lockd-debug.c  lockd-process-mgr.c  lockd-window-mgr.c  menu_daemon.c  package_mgr.c  pkg_event.c  process_mgr.c  starter.c  starter_w.c  status.c  virtual_canvas.c  x11.c  xmonitor.c
src/mobile/: home_mgr.c  hw_key.c  lock_mgr.c  popup.c  starter.c  window_mgr.c
src/wearable/: clock_mgr.c  home_mgr.c  hourly_alert.c  hw_key.c  starter.c
systemd/: starter.path  starter.socket
test/: get_entry.c  get_theme.c  set_theme.c
